Añado la función para ejecutar la llamada a la API

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bugs": {
         "url": "https://github.com/Leninner/asincronismo/issues"
     },
-    "homepage": "https://github.com/Leninner/asincronismo#readme"
+    "homepage": "https://github.com/Leninner/asincronismo#readme",
+    "dependencies": {
+        "xmlhttprequest": "^1.8.0"
+    }
 }
