Añado el reto de callbacks con peticiones a API públicas

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Trabajando con asincronismo",
     "main": "src/index.js",
     "scripts": {
-        "callback": "node src/callback/index.js"
+        "callback": "node src/callback/index.js",
+        "callback:challenge": "node src/callback/challenge.js"
     },
     "repository": {
         "type": "git",
