--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "src/index.js",
     "scripts": {
         "callback": "node src/callback/index.js",
-        "callback:challenge": "node src/callback/challenge.js"
+        "callback:challenge": "node src/callback/challenge.js",
+        "promise": "node src/promises/index.js"
     },
     "repository": {
         "type": "git",
