Añado la parte si async y await en Javascript

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "scripts": {
         "callback": "node src/callback/index.js",
         "callback:challenge": "node src/callback/challenge.js",
-        "promise": "node src/promises/index.js"
+        "promise": "node src/promises/index.js",
+        "promise:challenge": "node src/promises/challenge.js",
+        "async": "node src/async/index.js",
+        "async:challenge": "node src/async/challenge.js"
     },
     "repository": {
         "type": "git",
